<resources>
    <string name="app_name">Quik Data</string>
    <string name="new_forms_title">DNCA Forms Archive</string>
    <string name="sent_forms_title">Sent Forms</string>
    <string name="prefilled_title">Baseline Data</string>
    <string name="about_title">About</string>
    <string name="create_form_title_new">Create New DNCA Form</string>
    <string name="create_form_title_edit">Edit DNCA Form</string>
    <string name="create_form_subtitle">Damage, Needs, Capacities Assessment</string>
    <string name="create_form_save">Finish Editing Form</string>
    <string name="form_details_title">Form Details</string>
    <string name="gen_info_title">General Information</string>
    <string name="shelter_nonfood_title">Shelter and Non-Food Items</string>
    <string name="food_security_title">Food Security</string>
    <string name="livelihoods_title">Livelihoods</string>
    <string name="health_title">Health</string>
    <string name="water_sanitation_title">Water, Sanitation, and Hygiene</string>
    <string name="evacuation_title">Evacuation Sites</string>
    <string name="case_stories_title">Case Stories</string>
    <string name="prefilled_organization">Organization Name</string>
    <string name="prefilled_sitio">Sitio / Purok / Zone</string>
    <string name="prefilled_barangay">Barangay</string>
    <string name="prefilled_city">City / Municipality</string>
    <string name="prefilled_province">Province</string>
    <string name="prefilled_total_population">Total Population</string>
    <string name="text_remarks">Remarks</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_age_0to5">Ages 0 to 5</string>
    <string name="text_age_6to9">Ages 6 to 9</string>
    <string name="text_age_10to12">Ages 10 to 12</string>
    <string name="text_age_13to17">Ages 13 to 17</string>
    <string name="text_age_18to59">Ages 18 to 59</string>
    <string name="text_age_60plus">Ages 60+</string>
    <string name="prefilled_families_households">Total Families and Households</string>
    <string name="prefilled_families">Families</string>
    <string name="prefilled_households">Households</string>
    <string name="prefilled_houses">Total Number of Houses</string>
    <string name="text_concrete">Concrete</string>
    <string name="text_semiconcrete">Semi-Concrete</string>
    <string name="text_light_materials">Light Materials</string>
    <string name="prefilled_organization_location">Organization and Location</string>
    <string name="form_details_assessment_date">Assessment Date</string>
    <string name="form_details_interviewer_name">Interviewer\'s Name</string>
    <string name="form_details_interviewer_contact">Interviewer\'s Contact Number</string>
    <string name="form_details_interviewee_name">Interviewees\' Names</string>
    <string name="form_details_interviewee_contact">Interviewee\'s Contact Numbers</string>
    <string name="form_details_sources">Sources of Information</string>
    <string name="calamity_info_title">Calamity Details</string>
    <string name="calamity_info_type">Type of Calamity</string>
    <string name="calamity_info_date">Date of Occurrence</string>
    <string name="calamity_info_event_desc">Description of the Event</string>
    <string name="calamity_info_area_desc">Brief Description of the Affected Area</string>
    <string name="calamity_info_area_desc_details">Accessibility, Safety, Availability of Markets, etc.</string>
    <string name="calamity_info_desc">Description of the Calamity</string>
    <string name="population_title">Population</string>
    <string name="population_affected">Affected</string>
    <string name="population_displaced">Displaced</string>
    <string name="families_title">Families and Households</string>
    <string name="families_families">Families</string>
    <string name="families_households">Households</string>
    <string name="families_affected">Affected</string>
    <string name="families_displaced">Displaced</string>
    <string name="vulnerable_title">Vulnerable Population</string>
    <string name="vulnerable_pregnant">Pregnant Women</string>
    <string name="vulnerable_lactating">Lactating Mothers</string>
    <string name="vulnerable_lgbt">LGBT</string>
    <string name="vulnerable_female_headed">Female-headed Households</string>
    <string name="vulnerable_child_headed">Child-headed Households</string>
    <string name="vulnerable_indigenous">Indigenous People</string>
    <string name="vulnerable_disabled">People with Disabilities</string>
    <string name="casualties_title">Casualties</string>
    <string name="casualties_dead">Dead</string>
    <string name="casualties_missing">Missing</string>
    <string name="casualties_injured">Injured</string>
    <string name="cause_of_death_title">Cause of Death</string>
    <string name="cause_of_death_measles">Measles</string>
    <string name="cause_of_death_diarrhea">Diarrhea</string>
    <string name="cause_of_death_pneumonia">Pneumonia</string>
    <string name="cause_of_death_dengue">Dengue</string>
    <string name="cause_of_death_drowning">Drowning</string>
    <string name="cause_of_death_heart_attack">Heart Attack</string>
    <string name="cause_of_death_electrocution">Electrocution</string>
    <string name="cause_of_death_collapsed_bldg">Collapsed Building</string>
    <string name="cause_of_death_others">Others</string>
    <string name="text_school">School</string>
    <string name="text_church">Church / Place of Worship</string>
    <string name="text_covered_court">Covered Court</string>
    <string name="text_brgy_hall">Barangay Hall</string>
    <string name="text_brgy_health_station">Barangay Health Station</string>
    <string name="text_evacuation_center">Evacuation Center</string>
    <string name="text_bridges">Bridges</string>
    <string name="text_roads">Roads</string>
    <string name="text_market">Market</string>
    <string name="text_electricity">Electricity</string>
    <string name="text_water">Water</string>
    <string name="text_hospital">Hospital</string>
    <string name="text_seaport_airport">Seaport / Airport</string>
    <string name="text_communication_lines">Communication Lines</string>
    <string name="text_livelihood_facilities">Livelihood Facilities</string>
    <string name="text_others">Others</string>
    <string name="text_kitchen_materials">Kitchen Materials</string>
    <string name="text_sleeping_kits">Sleeping Kits</string>
    <string name="text_plastic_sheets">Plastic Sheets / Trapal</string>
    <string name="text_hygiene_kits">Hygiene Kits</string>
    <string name="text_house_repair_kits">House Repair Kits</string>
    <string name="text_clothes">Clothes</string>
    <string name="text_water_filter">Jerry Can / Water Filter</string>
    <string name="infrastructure_damage_title">Damage to Infrastructure</string>
    <string name="infrastructure_damage_number">Number of Infrastructure</string>
    <string name="infrastructure_damage_remarks">Remarks\n(Specify if intermittent electricity, communications, etc.)</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="infrastructure_damage_functional">Is it functional?</string>
    <string name="house_damage_owned_households">Households in Owned Property</string>
    <string name="house_damage_rented_households">Households in Rented Property</string>
    <string name="house_damage_shared_households">Households in Shared Property</string>
    <string name="house_damage_owned_land">Owned Land</string>
    <string name="house_damage_rented_land">Rented Land</string>
    <string name="house_damage_tenanted_land">Tenanted Land</string>
    <string name="house_damage_informal_settlers">Informal Settlers</string>
    <string name="house_damage_partially_damaged">Partially Damaged Houses</string>
    <string name="house_damage_totally_damaged">Totally Damaged Houses</string>
    <string name="house_damage_title">Damage to Houses</string>
    <string name="shelter_coping_title">Coping</string>
    <string name="shelter_coping_displaced_families_location">Where are the displaced families staying?</string>
    <string name="shelter_coping_how_to_get_homes_back">How will they get their homes back to reasonable standard of living?</string>
    <string name="shelter_coping_when_to_return_home">When can they return home?</string>
    <string name="shelter_coping_if_cannot_return_home">What will they do if they cannot return home?</string>
    <string name="shelter_needs_title">Needs</string>
    <string name="shelter_needs_families_in_need">Families in Need</string>
    <string name="shelter_needs_specific_items">Specific Items Needed</string>
    <string name="shelter_gaps_title">Gaps</string>
    <string name="diseases_diarrhea">Diarrhea</string>
    <string name="diseases_pneumonia">Pneumonia</string>
    <string name="diseases_dengue">Dengue</string>
    <string name="diseases_number_of_cases">Number of Cases of Illnesses</string>
    <string name="diseases_medical_needs">Medical Needs</string>
    <string name="diseases_measles">Measles</string>
    <string name="diseases_others">Others</string>
    <string name="diseases_check_up">Check-up</string>
    <string name="diseases_hospitalization">Hospitalization</string>
    <string name="diseases_medicines">Medicines</string>
    <string name="psychosocial_cases">Number of Cases</string>
    <string name="psychosocial_manifestations">Manifestations of mental stress/trauma (Blank stare, nightmares, sleep disorder, violent tendencies, etc.)</string>
    <string name="psychosocial_needs">Needs (Counselling, referrals, etc.)</string>
    <string name="text_level1">Level 1</string>
    <string name="text_level2">Level 2</string>
    <string name="text_level3">Level 3</string>
    <string name="wash_conditions_info_level_1">Stand-alone water points (hand pumps, shallow wells, rainwater collectors) serving an average of 15 hh within a 250-meter distance</string>
    <string name="wash_conditions_info_level_2">Piped water with communal water point (borewell, spring system) serving an average of 4–6 hh within a 25-meter distance</string>
    <string name="wash_conditions_info_level_3">Piped water supply with a private water point (house connection) based on a daily water demand of more than 100 liters per person</string>
    <string name="assistance_organization">Name of Organization / Agency</string>
    <string name="assistance_type">Type of Assistance Received</string>
    <string name="assistance_date_received">Date Received</string>
    <string name="assistance_quantity">Quantity / Amount</string>
    <string name="assistance_beneficiaries">Beneficiaries</string>
    <string name="text_men">Men</string>
    <string name="text_women">Women</string>
    <string name="text_boys">Boys</string>
    <string name="text_girls">Girls</string>
    <string name="evacuation_site_info_name">Name of Evacuation Center or Temporary Shelter</string>
    <string name="evacuation_site_info_location">Location</string>
    <string name="evacuation_site_info_date">Date of Evacuation</string>
    <string name="evacuation_site_info_displaced">Displaced</string>
    <string name="evacuation_site_info_non_displaced">Non-displaced</string>
    <string name="evacuation_site_shelter_size">Evacuation Center / Shelter Size (in Square Meters)</string>
    <string name="evacuation_site_info_lgu_designated">Is it designated by the LGU?</string>
    <string name="evacuation_site_info_displaced_question">Have they moved?</string>
    <string name="evacuation_site_info_households">How many households and families are staying here?</string>
    <string name="evacuation_site_distance">Distance from the Community (in Kilometers)</string>
    <string name="evacuation_site_info_type">Type of Evacuation Center or Temporary Shelter</string>
</resources>