<?xml version="1.0" encoding="utf-8"?>
<com.cpu.quikdata.customviews.CollapsibleContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:collapsed="true">

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathMeaslesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_measles"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathDiarrheaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_diarrhea"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathPneumoniaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_pneumonia"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathDengueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_dengue"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathDrowningText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_drowning"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathHeartAttackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_heart_attack"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathElectrocutionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_electrocution"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathCollapsedBldgText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_collapsed_bldg"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/causeOfDeathOthersText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/cause_of_death_others"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

</com.cpu.quikdata.customviews.CollapsibleContainer>