<?xml version="1.0" encoding="utf-8"?>
<com.cpu.quikdata.customviews.CollapsibleContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:collapsed="true">

    <com.cpu.quikdata.customviews.questions.TwoNumbersQuestion
        android:id="@+id/psychosocialCasesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/psychosocial_cases"
        app:textHint1="@string/text_male"
        app:textHint2="@string/text_female"/>

    <com.cpu.quikdata.customviews.questions.MultilineStringLongQuestion
        android:id="@+id/psychosocialManifestationsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/psychosocial_manifestations"/>

    <com.cpu.quikdata.customviews.questions.MultilineStringLongQuestion
        android:id="@+id/psychosocialNeedsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:question="@string/psychosocial_needs"/>

</com.cpu.quikdata.customviews.CollapsibleContainer>