<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".feature.createform.evacuationinfo.siteinfo.SiteInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/lightGray">

            <com.cpu.quikdata.customviews.questions.MultilineStringLongQuestion
                android:id="@+id/evacuationSiteInfoNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimenMid"
                app:question="@string/evacuation_site_info_name"/>

            <com.cpu.quikdata.customviews.questions.DateQuestion
                android:id="@+id/evacuationSiteInfoDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:question="@string/evacuation_site_info_date" />

            <com.cpu.quikdata.customviews.questions.MultilineStringLongQuestion
                android:id="@+id/evacuationSiteInfoLocationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimenMid"
                app:question="@string/evacuation_site_info_location"/>

            <com.cpu.quikdata.customviews.questions.BooleanQuestion
                android:id="@+id/evacuationSiteInfoHaveMovedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:question="@string/evacuation_site_info_displaced_question"
                app:yesText="@string/evacuation_site_info_displaced"
                app:noText="@string/evacuation_site_info_non_displaced"/>

            <com.cpu.quikdata.customviews.questions.BooleanQuestion
                android:id="@+id/evacuationSiteInfoLguDesignatedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:question="@string/evacuation_site_info_lgu_designated"/>

            <com.cpu.quikdata.customviews.questions.MultipleChoiceDropdownQuestion
                android:id="@+id/evacuationSiteInfoTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:questionChoice="@string/evacuation_site_info_type"/>

            <com.cpu.quikdata.customviews.questions.NumberQuestion
                android:id="@+id/evacuationSiteInfoHouseholdsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimenMid"
                app:question="@string/evacuation_site_info_households"/>

            <com.cpu.quikdata.customviews.questions.MultilineStringLongQuestion
                android:id="@+id/evacuationSiteInfoDistanceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:question="@string/evacuation_site_distance"/>

            <com.cpu.quikdata.customviews.questions.MultilineStringLongQuestion
                android:id="@+id/evacuationSiteInfoShelterSizeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimenMid"
                app:question="@string/evacuation_site_shelter_size"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>